Refactoring files for generic setup.

--- a/config/system-dev.ini
+++ b/config/system-dev.ini
@@ -1,5 +1,5 @@
 ; This file contains default system configurations
 
 [paths]
-root = "/absolute/path/to/root"
+root = "/Users/Bandu/NetBeansProjects/ease-php"
 include_path = "appended/to/php/include/path"
