--- a/apps/sample/config/sample-dev.ini
+++ b/apps/sample/config/sample-dev.ini
@@ -1,3 +1,3 @@
 ; This file contains settings specific to the 'sample' application
 [controllers]
-url = "Fully\Qualified\Controller\Name"
+SAMPLE = "Fully\Qualified\Controller\Name"
