--- a/config/system-dev.ini
+++ b/config/system-dev.ini
@@ -1,5 +1,6 @@
 ; This file contains default system configurations
 
 [paths]
-root = "/Users/Bandu/NetBeansProjects/ease-php"
+root = "/home/sbanda/workspace/alloy"
+apps = "/home/sbanda/workspace/alloy/apps"
 include_path = "appended/to/php/include/path"
