Created campaigns controller to enable search and the return of multiple campaigns with a single request.

--- a/apps/alloy/config/sample-dev.ini
+++ b/apps/alloy/config/sample-dev.ini
@@ -7,3 +7,4 @@ controllers = "alloy/classes/controllers"
 
 [controllers]
 CAMPAIGN = "Controllers\Fusion\CampaignController"
+CAMPAIGNS = "Controllers\Fusion\CampaignsController"
